# RiskOptima-Platform

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/domain/: models.py
backend/app/repositories/: portfolio_repository.py
backend/app/services/: generation_service.py  market_data_service.py  notebook_service.py  portfolio_service.py  render_service.py  risk_service.py  sample_portfolio_service.py  signal_service.py  stress_service.py
backend/backend/generated_data/portfolio_1/e85aefa52776d1e8/: charts.json  metadata.json  report.json
backend/backend/generated_data/portfolio_2/c0ab2f7ad7909823/: charts.json  metadata.json  report.json
backend/tests/: test_api.py  test_risk_service.py
docs/: api.md  architecture.md
economic-calendar/: .gitignore  README.md  RiskOptima.EconomicCalendar.slnx  docker-compose.yml
economic-calendar/RiskOptima.EconomicCalendar.Api/: Dockerfile  Program.cs  RiskOptima.EconomicCalendar.Api.csproj  RiskOptima.EconomicCalendar.Api.http  appsettings.Development.json  appsettings.json
economic-calendar/RiskOptima.EconomicCalendar.Application/: EconomicCalendarService.cs  EconomicEventDto.cs  EventQuery.cs  IEconomicCalendarProvider.cs  IEconomicEventRepository.cs  (+1 more)
notebooks/: riskoptima_platform_walkthrough.ipynb
sample_data/: concentrated_growth_portfolio.csv  institutional_portfolio.csv  vanguard_multi_asset_portfolio.csv
(+44 files in other folders)
