[project]
name = "riskoptima-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the RiskOptima institutional portfolio risk platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3.0",
    "pandas>=2.1.4",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.1",
    "statsmodels>=0.14.2",
    "yfinance>=0.2.54",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "squarify>=0.4.4",
    "riskoptima==2.4.1",
]

[project.optional-dependencies]
test = ["pytest>=8.2.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
